<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/btnGroupRL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/courierLoginBTN"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_weight="0.5"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/courier_lgn" />

            <Button
                android:id="@+id/userLoginBTN"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_weight="0.5"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/user_lgn" />
        </LinearLayout>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phoneTVRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGroupRL"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/cellLoginET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="textPhonetic|phone" />
        </RelativeLayout>



</RelativeLayout>