<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">



    <RelativeLayout
        android:id="@+id/carrierInfoRL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/order_title"
            android:layout_weight="0.5"

            />
    </RelativeLayout>

    <RelativeLayout
            android:layout_below="@+id/carrierInfoRL"
            android:id="@+id/orderRL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_default_margin"
            android:layout_marginRight="@dimen/medium_default_margin">
            <EditText
                android:id="@+id/orderET"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                />


        </RelativeLayout>

    <RelativeLayout
            android:layout_below="@id/orderRL"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnSendOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:text="@string/order_it"
                    >

                </Button>
                <Button
                    android:id="@+id/btnDissmisOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:text="@string/Cancel"
                    >

                </Button>

            </LinearLayout>

        </RelativeLayout>


</RelativeLayout>